--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -12,7 +12,7 @@
         |<b>14 day easy-to-do movement and exercise plan</b> with videos: $59 Value
         |<b>Blood Sugar Explained</b> In Plain English (infographic): $14 Value
         |<b>Curalife Blood Sugar Healthy Cookbook</b>:      $40 Value
-        |<b>Free Shipping </b>:$8
+        |<b>Free Shipping </b>:$8 Value
         |<b>Community support</b>  with 100K+ peers: Priceless
         |<b>24/7 Customer Support</b>  (phone, email, or live chat): Priceless" | split: "|" %}
 
@@ -122,7 +122,8 @@
 
   #challenge-section .features .feature .feature-text {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    max-width: 300px;
   }
 
   #challenge-section .features .feature .feature-price {
