--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -123,11 +123,11 @@
   #challenge-section .features .feature .feature-text {
     display: flex;
     flex-direction: column;
-    max-width: 300px;
+    max-width: 367px;
+    padding-right: 60px;
   }
 
   #challenge-section .features .feature .feature-price {
-    display: flex;
     width: 50px;
     position: absolute;
     right: 0;
@@ -209,6 +209,10 @@
     }
 
     #challenge-section .features {
+      max-width: unset;
+    }
+
+    #challenge-section .features .feature .feature-text {
       max-width: unset;
     }
 
