--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -98,8 +98,8 @@
     padding: 15px 0;
     font-family: "PP Radio Grotesk";
     font-weight: normal;
-    font-size: 22px;
-    line-height: 22px;
+    font-size: clamp(15px, 2vw, 22px);
+   
   }
 
   #challenge-section .features .feature:nth-child(8) {
