--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -97,8 +97,8 @@
     border-bottom: 1px solid #D9D9D9;
     padding: 15px 0;
     font-family: "PP Radio Grotesk";
-    font-weight: normal;
-    font-size: clamp(15px, 2vw, 22px);
+    font-size: clamp(14px, 2vw, 20px);
+    line-height: 20px;
    
   }
 
