--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -7,12 +7,12 @@
 
     <div class="features-wrapper">
       <img class="main-image" src="{{ 'thirty-day-challenge-section-main-img.png' | asset_url }}" width="886" height="689" alt="">
-      {% assign features = "<b>30 day supply of Curalin</b>  (180 capsules): $75<small>oo</small> Value 
-        |<b>30 day mouth-watering meal plan</b> including recipes and videos: $29<small>oo</small> Value
-        |<b>14 day easy-to-do movement and exercise plan</b> with videos: $59<small>oo</small> Value
-        |<b>Blood Sugar Explained</b> In Plain English (infographic): $14<small>oo</small> Value
-        |<b>Curalife Blood Sugar Healthy Cookbook</b>: $40<small>oo</small> Value
-        |<b>Free Shipping </b>:$8<small>oo</small> Value
+      {% assign features = "<b>30 day supply of Curalin</b>  (180 capsules): $75<sup>oo</sup> Value 
+        |<b>30 day mouth-watering meal plan</b> including recipes and videos: $29<sup>oo</sup> Value
+        |<b>14 day easy-to-do movement and exercise plan</b> with videos: $59<sup>oo</sup> Value
+        |<b>Blood Sugar Explained</b> In Plain English (infographic): $14<sup>oo</sup> Value
+        |<b>Curalife Blood Sugar Healthy Cookbook</b>: $40<sup>oo</sup> Value
+        |<b>Free Shipping </b>:$8<sup>oo</sup> Value
         |<b>Community support</b>  with 100K+ peers: Priceless
         |<b>24/7 Customer Support</b>  (phone, email, or live chat): Priceless" | split: "|" %}
 
