--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -210,11 +210,16 @@
 
     #challenge-section .features {
       max-width: unset;
+      width: 100%;
     }
 
     #challenge-section .features .feature .feature-text {
       max-width: unset;
       padding-right: 92px;
+    }
+
+    #challenge-section .features .feature .feature-price {
+      width: 9vw;
     }
 
      .cta-btn {
