--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -128,7 +128,7 @@
   }
 
   #challenge-section .features .feature .feature-price {
-    width: 90px;
+    width: 89px;
     position: absolute;
     right: 0;
   }
@@ -184,6 +184,13 @@
 
   .cta-btn:hover {
     background: var(--light-orange);
+  }
+
+  @media screen and (max-width: 898px) {
+    #challenge-section .features .feature .feature-price {
+      width: 73px;
+  
+    }
   }
 
   @media screen and (max-width: 768px) {
