--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -238,4 +238,10 @@
       z-index: 2;
     }
   }
+
+  @media screen and (max-width: 627px) {
+    #challenge-section .features .feature .feature-price {
+        width: 11vw;
+    }
+  }
 </style>
