--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -244,4 +244,10 @@
         width: 11vw;
     }
   }
+
+  @media screen and (max-width: 513px) {
+    #challenge-section .features .feature .feature-price {
+        width: 13vw;
+    }
+  }
 </style>
