--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -250,4 +250,10 @@
         width: 13vw;
     }
   }
+
+  @media screen and (max-width: 434px) {
+    #challenge-section .features .feature .feature-price {
+        width: 15vw;
+    }
+  }
 </style>
