--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -256,4 +256,10 @@
         width: 15vw;
     }
   }
+
+  @media screen and (max-width: 376px) {
+    #challenge-section .features .feature .feature-price {
+        width: 18vw;
+    }
+  }
 </style>
