--- a/assets/common.scss
+++ b/assets/common.scss
@@ -1323,6 +1323,7 @@ body.compensate-for-scrollbar {
 	--green: var(--dark-green);
 	--light-green: #9EB069;
 	--brown: #D3AE5F;
+	--dark-brown: #A86129;
 	--orange: #FFB22D;
 	--light-orange: #FFC35A;
 	--red: #ED073E;
