--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -134,6 +134,14 @@
     color: var(--dark-brown);
   }
 
+  #challenge-section .features .feature .feature-price:nth-child(7){
+    color: var(--light-green);
+  }
+
+  #challenge-section .features .feature .feature-price:nth-child(8){
+    color: var(--light-green);
+  }
+
   .total-value {  
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
