--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -131,17 +131,12 @@
     width: 89px;
     position: absolute;
     right: 0;
-    color: var(--dark-brown);
+      color: {% if feature contains "Priceless" %}var(--light-green){% else %} var(--dark-brown){% endif %};
   }
 
-  #challenge-section .features .feature .feature-price:nth-child(7){
-    color: var(--light-green);
-  }
 
-  #challenge-section .features .feature .feature-price:nth-child(8){
-    color: var(--light-green);
-  }
 
+ 
   .total-value {  
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
