--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -131,7 +131,11 @@
     width: 89px;
     position: absolute;
     right: 0;
-    color: {% if feature contains "Priceless" %}var(--light-green){% else %} var(--dark-brown){% endif %};
+    color:  var(--dark-brown);
+  }
+
+  #challenge-section .features .feature .feature-price:nth-of-type(7){
+    color: var(--light-green);
   }
 
 
