--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -134,7 +134,7 @@
     color:  var(--dark-brown);
   }
 
-   .feature-price:nth-child(7){
+  #challenge-section .features .feature .feature-price::nth-of-type(odd){
     color: var(--light-green);
   }
 
