--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -131,7 +131,7 @@
     width: 89px;
     position: absolute;
     right: 0;
-    color:  var(--dark-brown);
+    color:  var(--light-green);
   }
 
   #challenge-section .features .feature .feature-price::nth-of-type(odd){
