--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -131,16 +131,9 @@
     width: 89px;
     position: absolute;
     right: 0;
-    color:  var(--light-green);
+    color:  var(--dark-brown);
   }
 
-  #challenge-section .features .feature .feature-price::nth-of-type(odd){
-    color: var(--light-green);
-  }
-
-
-
- 
   .total-value {  
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
