--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -127,7 +127,7 @@
     padding-right: 75px;
   }
 
-  #challenge-section .features .feature .feature-price {
+  .feature-price {
     width: 89px;
     position: absolute;
     right: 0;
