--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -127,14 +127,14 @@
     padding-right: 75px;
   }
 
-  .feature-price {
+  #challenge-section .features .feature .feature-price {
     width: 89px;
     position: absolute;
     right: 0;
     color:  var(--dark-brown);
   }
 
-  .feature-price:nth-last-child(-n+2) {
+  #challenge-section .features .feature .feature-price:nth-last-child(-n+2) {
     color:  var(--light-green);
   }
 
