--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -134,7 +134,7 @@
     color:  var(--dark-brown);
   }
 
-  #challenge-section .features .feature .feature-price:nth-of-type(4) {
+  #challenge-section .features .feature .feature-price:last-child {
     color:  var(--light-green);
   }
 
