--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -134,8 +134,10 @@
     color:  var(--dark-brown);
   }
 
-  #challenge-section .features .feature .feature-price:nth-last-child(-n+2) {
-    color:  var(--light-green);
+  #challenge-section .features .feature:nth-last-of-type(-n+2) .feature-price {
+    
+      color:  var(--light-green);
+    
   }
 
   .total-value {  
