--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -134,7 +134,7 @@
     color:  var(--dark-brown);
   }
 
-  #challenge-section .features .feature *.feature-price:nth-last-child(1){  
+  #challenge-section .features .feature *.feature-price:nth-child(8){  
       color:  var(--light-green);  
   }
 
