--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -134,9 +134,9 @@
     color:  var(--dark-brown);
   }
 
-  #challenge-section .features .feature .feature-price *:nth-last-child(-n+2) {  
+  {% comment %} #challenge-section .features .feature .feature-price *:nth-last-child(-n+2) {  
       color:  var(--light-green);  
-  }
+  } {% endcomment %}
 
   .total-value {  
     font-family: 'PP Radio Grotesk';
