--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -21,7 +21,12 @@
           <div class="feature">
             <div class="feature-icon"><i class="icofont-check"></i></div>
             <div class="feature-text">{{ feature | split: ":" | first }}</div>
+            {% if feature contains "Priceless" %}
+            <div class="feature-price" style="color: #95A157
+            ;">{{ feature | split: ":" | last }}</div>
+            {% else %}
             <div class="feature-price">{{ feature | split: ":" | last }}</div>
+        {% endif %}
           </div>
         {% endfor %}
         <div class="total-value">Total Value Before Discount: $185 </div>
