--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -2,13 +2,11 @@
     <div class="container">
         <div class="data-wrap">
             <div class="sub-title">
-                <h3><b>Are you ready for real change?</b></h3>
+                <h3><b>What’s in it for you?</b></h3>
                 <div class="description-overlay">
                     <h4>
-                        When keeping your blood sugar healthy is easy, your life is truly on your terms. You are
-                        back in
-                        control.
-                        Just take CuraLin as part of your diet to help support a healthy blood sugar level!
+                      To list a few...
+
                     </h4>
                 </div>
             </div>
@@ -36,57 +34,29 @@
 <style>
 
 
-  .real-changes {
-    background: var(--light-brown);
-    font-family: "Poppins", sans-serif;
+  .real-changes .sub-title h3 {
+    font-family: 'PP Radio Grotesk';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 60px;
+    line-height: 35px;
+    color: #404733;
   }
-    .real-changes .data-wrap {
-      padding: 0 2.1rem
-    }
 
-    .real-changes .sub-title {
-      padding-top: 3.375rem;
-      border-top: 1px solid #DCD9D9
-    }
 
-    .real-changes .description-overlay {
-      max-width: 69.5rem
-    }
-
-    .rw-item-col {
-      -webkit-box-flex: 0;
-      -ms-flex: 0 0 33.3333333333%;
-      flex: 0 0 33.3333333333%;
-      max-width: 33.3333333333%;
-      padding-right: .625rem;
-      padding-left: .625rem
-    }
 
     .real-changes-wrapper {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
-      -ms-flex-wrap: wrap;
       flex-wrap: wrap;
       padding-top: 1.125rem;
       margin: 0 -2.1875rem
     }
 
-    .real-changes-wrapper .rw-item-col {
-      padding-top: 2rem;
-      padding-bottom: 2rem
-    }
+    
 
-    .rw-item-box {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex
-    }
-
-    .rw-item-thumbnail {
-      width: 32.86%
-    }
-
+  
     .rw-item-description {
       width: 67.14%;
       padding-left: .9375rem
