--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -32,8 +32,9 @@
 </div>
 <!-- Real_Changes Section from General Page Style -->
 <style>
-
-
+  .real-changes {
+  background: var(--light-brown);
+  }
   .real-changes .sub-title h3 {
     font-family: 'PP Radio Grotesk';
     font-style: normal;
