--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -26,14 +26,14 @@
 
 <style>
   .real-changes {
-  background: var(--light-brown);
+       background: var(--light-brown);
    }
   .real-changes .sub-title h3 {
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
     font-size: 60px;
     line-height: 35px;
-    color: #404733;
+    color: var(--dark-green);
   }
 
 
