--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -28,12 +28,17 @@
    .real-changes {
        background: var(--light-brown);
    }
+
+   .real-changes .sub-title {
+    padding-top: 60px;
+   }
    .real-changes .sub-title h3 {
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
     font-size: 60px;
     line-height: 35px;
     color: var(--dark-green);
+    padding-bottom: 30px;
   }
 
   .real-changes .sub-title .description-overlay h4 {
