--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -57,7 +57,8 @@
       display: flex;
     }
     .change-item-thumbnail {
-
+            display: flex;
+            flex-direction: column;
     }
 
   
