--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -61,6 +61,7 @@
     .change-item-and-desc {
             display: flex;
             flex-direction: column;
+            max-width: 25%;
     }
 
   
