--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -58,7 +58,7 @@
     .real-changes-wrapper {    
       display: flex;
     }
-    .change-item-and-desc {
+       .change-item-and-desc {
             display: flex;
             flex-direction: column;
             max-width: 25%;
@@ -76,6 +76,12 @@
      text-align: left;
      font-size: 20px;
      line-height: 24px;
+   }
+
+   .change-item-and-desc {
+       max-width: unset;
+       width: 100%;
+       
    }
    
    }
