--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -61,7 +61,9 @@
        .change-item-and-desc {
             display: flex;
             flex-direction: column;
-            max-width: 25%;
+            width: 25%;
+            align-items: center;
+            text-align: center;
     }
 
   
