--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -57,6 +57,7 @@
 
     .real-changes-wrapper {    
       display: flex;
+      flex-wrap: wrap;
     }
        .change-item-and-desc {
             display: flex;
