--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -1,4 +1,4 @@
-<div class="real-changes">
+<div class="real-for-you">
     <div class="container">
         
             <div class="sub-title">
@@ -9,7 +9,7 @@
                     </h4>
                 </div>
             </div>
-            <div class="real-changes-wrapper">
+            <div class="real-for-you-wrapper">
                 {% for realChange in realChanges %}
                   <div class="change-item-and-desc">
                         <div class="change-item-thumbnail">
@@ -27,14 +27,14 @@
 </div>
 
 <style>
-   .real-changes {
+     .real-for-you {
        background: var(--light-brown);
-   }
+     }
 
-   .real-changes .sub-title {
+    .real-for-you .sub-title {
     padding-top: 60px;
-   }
-   .real-changes .sub-title h3 {
+    }
+   .real-for-you .sub-title h3 {
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
     font-size: 60px;
@@ -43,7 +43,7 @@
     padding-bottom: 30px;
   }
 
-  .real-changes .sub-title .description-overlay h4 {
+  .real-for-you .sub-title .description-overlay h4 {
     font-family: 'DM Sans';
     font-weight: 400;
     font-size: 40px;
@@ -55,7 +55,7 @@
 
 
 
-    .real-changes-wrapper {    
+    .real-for-you-wrapper {    
       display: flex;
       flex-wrap: wrap;
     }
@@ -70,12 +70,12 @@
   
  @media screen and (max-width: 768px) {
      
- .real-changes .sub-title h3 {
+ .real-for-you .sub-title h3 {
      text-align: left;
      font-size: 32px;
      line-height: 35px;
  }
-  .real-changes .sub-title .description-overlay h4 {
+  .real-for-you .sub-title .description-overlay h4 {
      text-align: left;
      font-size: 20px;
      line-height: 24px;
@@ -93,7 +93,7 @@
 
 
 <style>
-    .real-changes .sub-title {
+    .real-for-you .sub-title {
         border-top: unset !important;
     }
 
