--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -68,6 +68,15 @@
       align-items: center;
       text-align: center;
     }
+
+    .rw-item-description {   
+      font-family: 'PP Radio Grotesk';
+      font-weight: 700;
+      font-size: 35px;
+      line-height: 44px;
+      text-align: center;
+      color:var(--dark-green);
+    }
   
   
     @media screen and (max-width: 768px) {
@@ -89,6 +98,13 @@
         width: 100%;
   
       }
+
+      .rw-item-description {        
+        font-size: 30px;
+        line-height: 37px;     
+      }
+
+
   
     }
   </style>
