--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -69,7 +69,7 @@
       text-align: center;
     }
 
-    .rw-item-description {   
+    .rw-item-description h4 {   
       font-family: 'PP Radio Grotesk';
       font-weight: 700;
       font-size: 35px;
@@ -99,7 +99,7 @@
   
       }
 
-      .rw-item-description {        
+      .rw-item-description h4 {        
         font-size: 30px;
         line-height: 37px;     
       }
