--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -76,6 +76,18 @@
       text-align: center;
       color:var(--dark-green);
     }
+
+    .rw-item-description p {   
+      font-family: 'DM Sans';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 20px;
+      line-height: 24px;
+      text-align: center;
+      color:var(--dark-green);
+      
+    }
+
   
   
     @media screen and (max-width: 768px) {
@@ -101,6 +113,13 @@
       .rw-item-description h4 {        
         font-size: 30px;
       }
+
+      .rw-item-description p {   
+        
+        text-align: left;
+        
+      }
+  
 
 
   
