--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -110,6 +110,10 @@
   
       }
 
+      .change-item-thumbnail {
+        display: flex;
+      }
+
       .change-item-thumbnail h4 {        
         font-size: 30px;
       }
