--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -112,10 +112,11 @@
 
       .change-item-thumbnail {
         display: flex;
+        width: 100%;
       }
 
       .change-item-thumbnail h4 {        
-        font-size: 30px;
+        font-size: 24px;
       }
 
       .rw-item-description p {   
