--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -119,6 +119,11 @@
         font-size: 24px;
       }
 
+      .rw-item-description {
+        display: flex;
+        width: 100%;
+      }
+
       .rw-item-description p {   
         
         text-align: left;
