--- a/templates/page.thirty-day-challenge.liquid
+++ b/templates/page.thirty-day-challenge.liquid
@@ -14,5 +14,5 @@ mobility, and mood!
 Sweet Success: ", subTitle: "A Blood Sugar Challenge", textHero: "Support your glucose and feel amazing. Expert guidance. Personalized support. All natural supplements. We're with you every step  of the way." %}
 {% render 'thirty-day-challenge-say-goodby-section' %}
 {% render 'thirty-day-what-is-for-you' realChanges: realChanges %}
-{% render 'thirty-day-challenge-section' ctaButtonLink:"/collections/all", ctaTitle: "Join the Challenge!" %}
+{% render 'thirty-day-challenge-section' ctaButtonLink: "/products/curalin-pack", ctaTitle: "Join the Challenge!" %}
 
