--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -14,7 +14,7 @@
       <div class="change-item-and-desc">
         <div class="change-item-thumbnail">
           <img src="{{ realChange | asset_url | split: "*" | first }}" width="102" height="86" alt="">
-          <h4>{{ realChange | split: "*" | last | split: ":" | first }}</h4>
+          {{ realChange | split: "*" | last | split: ":" | first }}
         </div>
         <div class="rw-item-description">
         {{ realChange | split: "*" | last | split: ":" | last }}
@@ -68,7 +68,7 @@
     text-align: center;
   }
 
-  .change-item-thumbnail h4 {
+  .change-item-thumbnail {
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
     font-size: 35px;
@@ -111,9 +111,6 @@
     .change-item-thumbnail {
       display: flex;
       width: 100%;
-    }
-
-    .change-item-thumbnail h4 {
       font-size: 24px;
     }
 
