--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -74,6 +74,10 @@
     font-size: 35px;
     text-align: center;
     color: var(--dark-green);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
   }
 
   .rw-item-description {
