--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -113,7 +113,7 @@
     }
 
     .change-item-thumbnail {
-      display: flex;
+      flex-direction: row;
       width: 100%;
       font-size: 24px;
     }
