--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -116,6 +116,7 @@
       flex-direction: row;
       width: 100%;
       font-size: 24px;
+      text-align: left;
     }
 
     .rw-item-description {
