--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -115,8 +115,8 @@
     .change-item-thumbnail {
       flex-direction: row;
       width: 100%;
-      font-size: 30px;
-      align-items: flex-start;
+      font-size: 24px;
+      align-content: flex-start;
       text-align: left;
     }
 
