--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -116,7 +116,7 @@
       flex-direction: row;
       width: 100%;
       font-size: 24px;
-      align-content: flex-start;
+      justify-content: flex-start;
       text-align: left;
     }
 
