--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -60,6 +60,8 @@
     display: flex;
     flex-wrap: wrap;
     padding-bottom: 40px;
+
+    border-bottom: 1px solid #000000;
   }
 
   .change-item-and-desc {
