--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -23,6 +23,7 @@
 
       {% endfor %}
     </div>
+    <div class="border-desk"></div>
   </div>
 </div>
 
@@ -60,8 +61,11 @@
     display: flex;
     flex-wrap: wrap;
     padding-bottom: 40px;
+  }
 
-    border-bottom: 1px solid #000000;
+  .border-desk {
+    border: 1px solid var(--dark-green);
+    
   }
 
   .change-item-and-desc {
