--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -64,7 +64,9 @@
   }
 
   .border-desk {
-    border: 1px solid var(--dark-green);
+    border-top: 1px solid var(--dark-green);
+    width: 60%;
+    margin: 0 auto;
     
   }
 
