--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -66,8 +66,7 @@
   .border-desk {
     border-top: 1px solid var(--dark-green);
     width: 60%;
-    margin: 0 auto;
-    
+    margin: 0 auto;  
   }
 
   .change-item-and-desc {
@@ -102,6 +101,9 @@
 
 
   @media screen and (max-width: 768px) {
+    .border-desk {
+      display: none;
+    }
 
     .real-for-you .sub-title h3 {
       text-align: left;
