--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -24,9 +24,10 @@
       {% endfor %}
     </div>
     <div class="border-desk"></div>
+    <div class="descripton-wrapper">
     <div class="rw-item-description">
       If you’re not satisfied with the program, we’ll give you your money back for up to 60 days! That’s how confident we feel about the program. We’re your partner through the whole journey. 
-    </div>
+    </div></div>
   </div>
 </div>
 
@@ -89,6 +90,10 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+  }
+
+  .descripton-wrapper {
+    padding: 20px 0;
   }
 
   .rw-item-description {
