--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -93,7 +93,7 @@
   }
 
   .descripton-wrapper {
-    padding: 20px 0;
+    padding: 30px 0;
   }
 
   .rw-item-description {
@@ -111,6 +111,10 @@
   @media screen and (max-width: 768px) {
     .border-desk {
       display: none;
+    }
+
+    .real-for-you-wrapper {
+      padding-bottom: unset;
     }
 
     .real-for-you .sub-title h3 {
