--- a/templates/page.thirty-day-challenge.liquid
+++ b/templates/page.thirty-day-challenge.liquid
@@ -3,7 +3,7 @@
 {% assign realChanges = 'thirty-day-challenge-what-is-for-you-01.png*Maintain Glucose:Supporting your overall health,
 mobility, and mood!
 
-|thirty-day-challenge-what-is-for-you-02.png*Feel better:You’ll feel and look great!
+|thirty-day-challenge-what-is-for-you-02.png*Feel better:You’ll feel <b>and</b> look great!
 |thirty-day-challenge-what-is-for-you-03.png*Get energy:You have energy to go the extra mile in your life!
 
 |thirty-day-challenge-what-is-for-you-04.png*Enjoy food:You won’t dread healthy cooking. You’ll enjoy it!
