--- a/templates/page.thirty-day-challenge.liquid
+++ b/templates/page.thirty-day-challenge.liquid
@@ -6,7 +6,7 @@ mobility, and mood!
 |thirty-day-challenge-what-is-for-you-02.png*Feel better:You’ll feel <b>and</b> look great!
 |thirty-day-challenge-what-is-for-you-03.png*Get energy:You have <b>energy</b> to go the extra mile in your life!
 
-|thirty-day-challenge-what-is-for-you-04.png*Enjoy food:You won’t dread healthy cooking. You’ll enjoy it!
+|thirty-day-challenge-what-is-for-you-04.png*Enjoy food:You won’t dread healthy cooking. You’ll <b>enjoy</b> it!
 
 ' | split: '|' %}
 {% render 'sale-banner', isOnlyLogo: true, desktopContent: "logo", mobileContent: "logo", bgColor: "green", logoFileName: "logo-white-black-friday.png" %}
