--- a/templates/page.thirty-day-challenge.liquid
+++ b/templates/page.thirty-day-challenge.liquid
@@ -13,6 +13,6 @@ mobility, and mood!
 {% render 'thirty-day-challenge-hero-banner', mainTitle: "30 Days to
 Sweet Success: ", subTitle: "A Blood Sugar Challenge", textHero: "Support your glucose and feel amazing. Expert guidance. Personalized support. All natural supplements. We're with you every step  of the way." %}
 {% render 'thirty-day-challenge-say-goodby-section' %}
-{% render 'thirty-day-what-is-for-you' realChanges: realChanges %}
+{% render 'thirty-day-what-is-for-you' realChanges: realChanges, ctaButtonLink: "/products/curalin-pack", ctaTitle: "Sweeter days ahead" %}
 {% render 'thirty-day-challenge-section' ctaButtonLink: "/products/curalin-pack", ctaTitle: "Join the Challenge!" %}
 
