--- a/assets/common.scss
+++ b/assets/common.scss
@@ -1322,6 +1322,7 @@ body.compensate-for-scrollbar {
 	--dark-green: #404733;
 	--green: var(--dark-green);
 	--light-green: #9EB069;
+	--regular-green: #697938;
 	--brown: #D3AE5F;
 	--light-brown: #F0D4A6;
 	--dark-brown: #A86129;
