--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -123,7 +123,7 @@
     margin-left: 16%;
   }
 
-  .cta-btn:hover {
+  .real-for-you .container .cta-btn:hover {
     background: var(--regular-green);
   }
 
