--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -107,7 +107,8 @@
 
   }
 
-  .real-for-you .container .cta-btn {
+  .real-for-you .container .cta-btn {  
+    padding: 30px 0;
     font-weight: 100;
     background: var(--dark-green);
     text-align: center;
