--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -114,7 +114,6 @@
   }
 
   .real-for-you .container .cta-btn {  
-    padding: 30px 0;
     font-weight: 100;
     background: var(--dark-green);
     text-align: center;
@@ -126,12 +125,12 @@
     padding: 15px 40px;
     box-shadow: 0px 5px 12.5px rgba(0, 0, 0, 0.15);
     transition: unset;
-    margin-bottom: 20px;
-    margin-left: 16%;
+    margin-left: unset;
   }
 
   .real-for-you .container .cta-btn:hover {
     background: var(--regular-green);
+    border: 1px solid  var(--regular-green);
   }
 
 
