--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -115,16 +115,12 @@
 
   .real-for-you .container .cta-btn {  
     background: var(--dark-green);
-    text-align: center;
-    border: 1px solid  var(--dark-green);
-    border-radius: 4px;
+    border: 1px solid var(--dark-green);
     font-weight: 700;
     font-size: clamp(14px, 2vw, 18px);
     color: var(--white);
-    padding: 15px 40px;
-    box-shadow: 0px 5px 12.5px rgba(0, 0, 0, 0.15);
-    transition: unset;
     margin-left: unset;
+    
   }
 
   .real-for-you .container .cta-btn:hover {
@@ -171,6 +167,13 @@
 
     .rw-item-description {
       text-align: left;
+    }
+
+    .real-for-you .container .cta-btn {  
+      position: unset; 
+      width: unset;
+      z-index: unset;
+
     }
 
   }
