--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -111,6 +111,7 @@
   .button-wrapper {
     display: flex;
     justify-content: center;
+    padding-bottom: 20px;
   }
 
   .real-for-you .container .cta-btn {  
