--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -4,9 +4,9 @@
     <div class="sub-title">
       <h3><b>What’s in it for you?</b></h3>
       <div class="description-overlay">
-        <h4>
+       
           To list a few...
-        </h4>
+       
       </div>
     </div>
     <div class="real-for-you-wrapper">
@@ -52,7 +52,7 @@
     padding-bottom: 30px;
   }
 
-  .real-for-you .sub-title .description-overlay h4 {
+  .real-for-you .sub-title .description-overlay  {
     font-family: 'DM Sans';
     font-weight: 400;
     font-size: 40px;
@@ -146,10 +146,11 @@
       line-height: 35px;
     }
 
-    .real-for-you .sub-title .description-overlay h4 {
+    .real-for-you .sub-title .description-overlay {
       text-align: left;
       font-size: 20px;
       line-height: 24px;
+      font-weight: 700;
     }
 
     .change-item-and-desc {
