--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -151,6 +151,7 @@
       font-size: 20px;
       line-height: 24px;
       font-weight: 700;
+      padding-bottom: unset;
     }
 
     .change-item-and-desc {
