--- a/templates/page.thirty-day-challenge.liquid
+++ b/templates/page.thirty-day-challenge.liquid
@@ -9,10 +9,20 @@ mobility, and mood!
 |thirty-day-challenge-what-is-for-you-04.png*Enjoy food:You won’t dread healthy cooking. You’ll <b> enjoy </b> it!
 
 ' | split: '|' %}
+
+
+{% assign challenges = 'thirty-day-accepted-01.png*Do you have a stove or an oven to cook?
+
+|thirty-day-accepted-02.png*Do you have a couch or space to do some easy, 20 minute workouts? 
+|thirty-day-accepted-03.png*Do you have the motivation to change your life?
+' | split: '|' %}
+
+
 {% render 'sale-banner', isOnlyLogo: true, desktopContent: "logo", mobileContent: "logo", bgColor: "green", logoFileName: "logo-white-black-friday.png" %}
 {% render 'thirty-day-challenge-hero-banner', mainTitle: "30 Days to
 Sweet Success: ", subTitle: "A Blood Sugar Challenge", textHero: "Support your glucose and feel amazing. Expert guidance. Personalized support. All natural supplements. We're with you every step  of the way." %}
 {% render 'thirty-day-challenge-say-goodby-section' %}
-{% render 'thirty-day-what-is-for-you' realChanges: realChanges, ctaButtonLink: "/products/curalin-pack", ctaTitle: "Sweeter days ahead" %}
+{% render 'thirty-day-what-is-for-you', realChanges: realChanges, ctaButtonLink: "/products/curalin-pack", ctaTitle: "Sweeter days ahead" %}
 {% render 'thirty-day-challenge-section' ctaButtonLink: "/products/curalin-pack", ctaTitle: "Join the Challenge!" %}
+{% render 'thirty-day-challenge-is-for-you', challenges: challenges, ctaButtonLink: "/products/curalin-pack", ctaTitle: "Challenge Accepted!" %}
 
