--- a/assets/common.scss
+++ b/assets/common.scss
@@ -1323,6 +1323,7 @@ body.compensate-for-scrollbar {
 	--green: var(--dark-green);
 	--light-green: #9EB069;
 	--regular-green: #697938;
+	--medium-green:#77845F;
 	--brown: #D3AE5F;
 	--light-brown: #F0D4A6;
 	--dark-brown: #A86129;
