--- a/snippets/thirty-day-challenge-is-for-you.liquid
+++ b/snippets/thirty-day-challenge-is-for-you.liquid
@@ -1,30 +1,22 @@
-<div class="real-for-you">
+<div class="challenge-for-you">
   <div class="container">
 
     <div class="sub-title">
-      <h3><b>What’s in it for you?</b></h3>
-      <div class="description-overlay">
-       
-          To list a few...
-       
-      </div>
+      <h3><b>Is this challenge right for you?</b></h3>
     </div>
-    <div class="real-for-you-wrapper">
+    <div class="challenge-for-you-wrapper">
       {% for challenge in challenges %}
-      <div class="change-item-and-desc">
-        <div class="change-item-thumbnail">
+      <div class="challenge-item-and-desc">
+        <div class="challenge-item-thumbnail">
           <img src="{{ challenge | asset_url | split: "*" | first }}" width="102" height="86" alt="">
           {{ challenge | split: "*" | last }}
-        </div>
-        
+        </div>    
       </div>
-
       {% endfor %}
     </div>
-    <div class="border-desk"></div>
     <div class="descripton-wrapper">
     <div class="rw-item-description">
-      If you’re not satisfied with the program, we’ll give you your money back for up to 60 days! That’s how confident we feel about the program. We’re your partner through the whole journey. 
+      Then YES! This challenge is for you! 
     </div></div>
       <div class="button-wrapper">
     <a class="cta-btn" href="{{ ctaButtonLink }}">{{ ctaTitle }}</a>
@@ -33,24 +25,24 @@
 </div>
 
 <style>
-  .real-for-you {
-    background: var(--light-brown);
+  .challenge-for-you {
+    background: var(--medium-green);
   }
 
-  .real-for-you .sub-title {
+  .challenge-for-you .sub-title {
     padding-top: 60px;
   }
 
-  .real-for-you .sub-title h3 {
+  .challenge-for-you .sub-title h3 {
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
     font-size: 60px;
     line-height: 35px;
-    color: var(--dark-green);
+    color: var(--white);
     padding-bottom: 30px;
   }
 
-  .real-for-you .sub-title .description-overlay  {
+  .challenge-for-you .sub-title .description-overlay  {
     font-family: 'DM Sans';
     font-weight: 400;
     font-size: 40px;
@@ -62,7 +54,7 @@
 
 
 
-  .real-for-you-wrapper {
+  .challenge-for-you-wrapper {
     display: flex;
     flex-wrap: wrap;
     padding-bottom: 40px;
@@ -74,14 +66,14 @@
     margin: 0 auto;  
   }
 
-  .change-item-and-desc {
+  .challenge-item-and-desc {
     display: flex;
     flex-direction: column;
     width: 25%;
     text-align: center;
   }
 
-  .change-item-thumbnail {
+  .challenge-item-thumbnail {
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
     font-size: 35px;
@@ -112,7 +104,7 @@
     padding-bottom: 20px;
   }
 
-  .real-for-you .container .cta-btn {  
+  .challenge-for-you .container .cta-btn {  
     background: var(--dark-green);
     border: 1px solid var(--dark-green);
     font-weight: 700;
@@ -122,7 +114,7 @@
     
   }
 
-  .real-for-you .container .cta-btn:hover {
+  .challenge-for-you .container .cta-btn:hover {
     background: var(--regular-green);
     border: 1px solid  var(--regular-green);
   }
@@ -134,17 +126,17 @@
       display: none;
     }
 
-    .real-for-you-wrapper {
+    .challenge-for-you-wrapper {
       padding-bottom: unset;
     }
 
-    .real-for-you .sub-title h3 {
+    .challenge-for-you .sub-title h3 {
       text-align: left;
       font-size: 32px;
       line-height: 35px;
     }
 
-    .real-for-you .sub-title .description-overlay {
+    .challenge-for-you .sub-title .description-overlay {
       text-align: left;
       font-size: 20px;
       line-height: 24px;
@@ -152,13 +144,13 @@
       padding-bottom: unset;
     }
 
-    .change-item-and-desc {
+    .challenge-item-and-desc {
       max-width: unset;
       width: 100%;
 
     }
 
-    .change-item-thumbnail {
+    .challenge-item-thumbnail {
       flex-direction: row;
       width: 100%;
       font-size: 24px;
@@ -170,7 +162,7 @@
       text-align: left;
     }
 
-    .real-for-you .container .cta-btn {  
+    .challenge-for-you .container .cta-btn {  
       position: unset; 
       width: unset;
       z-index: unset;
