--- a/assets/common.scss
+++ b/assets/common.scss
@@ -1314,6 +1314,7 @@ body.compensate-for-scrollbar {
 	--transition: .3s ease-in-out;
 	--poppins: 'DM Sans',sans-serif;
 	--white: #ffffff;
+	--white-cream: #FFF1E8;
 	--black: #000000;
 	--dark: #222222;
 	--dark-gray: #838383;
